kubernetes/applications/media/manifests/komga/komga-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: komga-service
  namespace: media
spec:
  selector:
    app: komga
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 25600
      targetPort: 25600
